; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_encrypt_decrypt_cbc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-msg.c_rwm_encrypt_decrypt_cbc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw_message = type { i32 }
%struct.vk_aes_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rwm_encrypt_decrypt_cbc(%struct.raw_message* %0, i32 %1, %struct.vk_aes_ctx* %2, i8* %3) #0 {
  %5 = alloca %struct.raw_message*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vk_aes_ctx*, align 8
  %8 = alloca i8*, align 8
  store %struct.raw_message* %0, %struct.raw_message** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.vk_aes_ctx* %2, %struct.vk_aes_ctx** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load %struct.raw_message*, %struct.raw_message** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.vk_aes_ctx*, %struct.vk_aes_ctx** %7, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call i32 @_rwm_encrypt_decrypt(%struct.raw_message* %9, i32 %10, %struct.vk_aes_ctx* %11, i32 1, i8* %12)
  ret i32 %13
}

declare dso_local i32 @_rwm_encrypt_decrypt(%struct.raw_message*, i32, %struct.vk_aes_ctx*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
